# ptb_simple

./: .gitignore  README.md  pyproject.toml
configs/: EHR_SDS_population_xgb copy.yaml  EHR_SDS_population_xgb.yaml  EHR_SP_population_xgb.yaml  cervix_population_mlp.yaml  cervix_population_xgb.yaml  test_mlp.yaml  test_xgb.yaml
outputs/: ptb_ehr_xgboost_risk_scores_kfold_oof.csv
ptb_simple/: paths.py  run_combine_scores.py  run_mlp_kfold_torch.py  run_simple_model.py  run_xgboost.py  run_xgboost_kfold.py  utils.py
ptb_simple/models/: mlp_model.py  xgb_model.py
ptb_simple/outputs/: population_test_preterm.yaml.json  ptb_combined_risk_scores.csv  ptb_combined_risk_scores_discards.json  ptb_ehr_mlp_risk_scores.csv  ptb_ehr_xgboost_risk_scores.csv  ptb_ehr_xgboost_risk_scores_kfold_oof.csv
ptb_simple/tmp/: run_mlp.py
test_data/: make_test_img_data.py  make_test_split.py  test.csv  test.json  test_img_pred_scores.csv  train.csv  train.json
